<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen">

    <TextView
        android:id="@+id/longlat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps" />

    <TextView
        android:id="@+id/ipaddr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip"
        android:paddingTop="50dp"/>

    <TextView
        android:id="@+id/opnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op"
        android:paddingTop="75dp"/>

    <TextView
        android:id="@+id/sumcontact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/con"
        android:paddingTop="125dp"/>

    <TextView
        android:id="@+id/remainbatt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bat"
        android:paddingTop="150dp"/>

    <!--<ImageView-->
        <!--android:id="@+id/first"-->
        <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:contentDescription="left image"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="fitXY" />-->

    <!--<LinearLayout-->
        <!--android:layout_width="1dp"-->
        <!--android:layout_weight="0"-->
        <!--android:background="#000000"-->
        <!--android:layout_height="fill_parent"/>-->

    <!--<ImageView-->
        <!--android:id="@+id/second"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_weight="1"-->
        <!--android:contentDescription="right image"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scaleType="fitXY" />-->

    <!--<com.yalantis.flip.sample.views.FontTextView-->
        <!--style="@style/TextView.Nickname"-->
        <!--android:id="@+id/nickname" />-->

    <!--<LinearLayout-->
        <!--android:layout_below="@+id/nickname"-->
        <!--android:id="@+id/interestsPrimary"-->
        <!--style="@style/LinearLayout.Interests">-->

        <!--<com.yalantis.flip.sample.views.FontTextView-->
            <!--style="@style/TextView.Interest"-->
            <!--android:id="@+id/interest_1" />-->

    <!--</LinearLayout>-->

</RelativeLayout>